--- a/PetNaturals/vite-project/index.html
+++ b/PetNaturals/vite-project/index.html
@@ -10,8 +10,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx" defer></script>
 
-    <script type="module" src="./src/component/FirstScreen/data.js" defer></script>
-    <script type="module" src="./src/component/FirstScreen/timer.js" defer></script>
+    <!-- <script type="module" src="./src/js/data.js" defer></script> -->
+    <script type="module" src="./src/js/timer.js" defer></script>
 
   </body>
 </html>
